syntax = "proto3";

package userpb;

option go_package = "github.com/Sethuram52001/system-design-compendium/exercises/grpc/proto/userpb";

// User message definition
message User {
    string id = 1;
    string name = 2;
    string email = 3;
    int32 age = 4;
}

// Request message for GetUser RPC
message GetUserRequest {
    string id = 1;
} 

// Response message for GetUser RPC
message GetUserResponse {
    User user = 1;
}

// UserService definition
service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}